--- a/app/templates/edit_money_movement.html
+++ b/app/templates/edit_money_movement.html
@@ -11,6 +11,7 @@
             <th scope="col">From</th>
             <th scope="col">To</th>
 
+
         </tr>
         </thead>
         <tbody>
@@ -20,13 +21,40 @@
             <td>{{ money_movement.money_amount|string + " " + money_movement.iso_4217_currency_code }}</td>
             <td>{{ money_movement.sender.first_name + " " + money_movement.sender.last_name }}</td>
             <td>{{ money_movement.receiver.first_name + " " + money_movement.receiver.last_name }}</td>
+
         </tr>
 
 
         </tbody>
     </table>
 
+    <h4>User Note</h4>
+    <div class="card">
+        <div class="card-body" style="white-space: pre" >{{ money_movement.user_note }}</div>
+    </div> <br>
 
 
+    <form action="" method="post" novalidate>
+        {{ form.hidden_tag() }}
+
+        <p className="col">
+
+            <h4>Edit User Note </h4>
+            {{ form.user_note(cols="35",rows="5") }} <br>
+            {{ form.submit() }}
+        </p>
+
+
+    </form>
+
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+
+            {% for message in messages %}
+                {{ message }}
+            {% endfor %}
+
+        {% endif %}
+    {% endwith %}
 
 {% endblock %}
