--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,24 +7,25 @@
 {% block navbar %}
 
     <nav class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
+                <a class="navbar-brand" href="#">Money Movement Viewer</a>
             </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="">Login</a></li>
-                </ul>
-            </div>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{ url_for("money_movement.view_all_money_movements") }}">View Movements</a></li>
+            </ul>
+            <ul class=" nav navbar-nav navbar-right">
+                {% if current_user.is_anonymous %}
+                    <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+                {% endif %}
+            </ul>
         </div>
     </nav>
+
+
 
 {% endblock %}
 
