--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -3,15 +3,37 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
-{% block app_content %}
-    <h1>Sign In</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
-        </div>
+    <div class="container">
+        {% block app_content %}
+            <h1>Sign In</h1>
+            <div class="row">
+                <div class="col-md-4">
+                    {{ wtf.quick_form(form) }}
+                </div>
+            </div>
+            <br>
+
+            {{ wtf.form_errors(form) }}
+            <p>
+            </p>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% for category,message in messages %}
+                        {% if category == "error" %}
+                            <div class="alert alert-danger" role="alert">{{ message }}</div>
+
+                        {% else %}
+
+                            <div class="alert alert-info" role="alert">{{ message }}</div>
+
+                        {% endif %}
+
+
+                    {% endfor %}
+                {% endif %}
+            {% endwith %}
+
+
+        {% endblock %}
     </div>
-    <br>
-    <p>
-    </p>
-{% endblock %}
 {% endblock %}
