--- a/app/templates/edit_money_movement.html
+++ b/app/templates/edit_money_movement.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
 
@@ -30,31 +31,28 @@
 
     <h4>User Note</h4>
     <div class="card">
-        <div class="card-body" style="white-space: pre" >{{ money_movement.user_note }}</div>
+        <div class="card-body" style="white-space: pre">{{ money_movement.user_note }}</div>
     </div> <br>
 
-
-    <form action="" method="post" novalidate>
-        {{ form.hidden_tag() }}
-
-        <p className="col">
-
-            <h4>Edit User Note </h4>
-            {{ form.user_note(cols="35",rows="5") }} <br>
-            {{ form.submit() }}
-        </p>
-
-
-    </form>
-
-    {% with messages = get_flashed_messages() %}
+    {{ wtf.quick_form(form) }}
+    <br>
+    {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
+            {% for category,message in messages %}
+                {% if category == "error" %}
+                    <div class="alert alert-danger" role="alert">{{ message }}</div>
 
-            {% for message in messages %}
-                {{ message }}
+                {% else %}
+
+                    <div class="alert alert-info" role="alert">{{ message }}</div>
+
+                {% endif %}
+
             {% endfor %}
-
         {% endif %}
     {% endwith %}
+
+
+
 
 {% endblock %}
